# sgpt-core

./: .cursorrules  .dockerignore  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  skills-lock.json
backend/: .gitignore  AGENTS.md  DOCUMENTATION.md  README.md  alembic.ini  langgraph.json  pyproject.toml  pyrightconfig.json  requirements.txt
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/docs/: DASTAN_DARI.md  bot-wa-deep-agent-fa.md  deep-agent-bale-flow-fa.md  design-agent.md  langfuse.md  structure-cluade.md  structure-gemini.md
backend/docs/deepagent/: async-subagent.md  context-engineering.md  human-in-loop.md  overview.md  profile.md  skills.md  subagent.md  tools.md
backend/examples/: graphiti_deep_agent_image_question_example.py  graphiti_deep_agent_long_memory_example.py  graphiti_deep_agent_memory_example.py
backend/notebooks/: graphiti_agent_demo.ipynb
backend/scripts/: graphiti_agent_demo.py  migrate_memory_files.py  res.json  run_migrations.sh  seed_dev_data.py
backend/src/app/: dependencies.py  logging.py  main.py  plans.py  settings.py
backend/src/app/agent/: __init__.py  deep_agent.py  format_response.py  graphiti_tool.py  langfuse.py  prompts.py  sample.py
backend/src/app/api/bot/: router.py
backend/src/app/api/v1/: api.py
backend/src/app/api/webhooks/: bale.py
backend/src/app/config/: __init__.py  graphiti.py  langfuse_settings.py
backend/src/app/db/: base.py  session.py
backend/src/app/db/migrations/: env.py
backend/src/app/errors/: base.py  codes.py  handlers.py
backend/src/app/knowledge_graph/: __init__.py  client.py  falkordb.py  search.py  search_config.py
backend/src/app/models/: __init__.py  base.py  identity.py  message.py  payment.py  subscription.py  user.py
backend/src/app/observability/: audit_log.py  metrics.py  tracing.py
backend/src/app/services/: __init__.py  agent_bridge.py  bale_user_service.py  message_service.py  payment_service.py  subscription_service.py
backend/src/common/: crypto.py  ids.py  pagination.py  time.py  validation.py
backend/src/integrations/bale/: __init__.py  bot_service.py  channel_check.py  client.py  formatting.py  get_profile.py  messaging.py  signatures.py  webhook.py
backend/src/integrations/bale/handlers/: __init__.py  contact.py  deep_chat.py  deps.py  fallback.py  payment.py  start.py  (+1 more)
backend/tests/: conftest.py
backend/tests/factories/: data_builders.py  db.py
backend/tests/integration/: test_admin_data_access.py  test_contest_lifecycle_flow.py  test_invite_acceptance_flow.py  test_phone_mismatch_rejection.py  test_start_command_saves_user.py
ingestion/: pyproject.toml
ingestion/config/: embedding.py  falkordb.py  graphiti.py  graphiti_trace.py  openai_reranker_compatible.py  repo_env.py
ingestion/examples/: graphiti_add_episode_example.py  graphiti_search_conceptual_example.py
ingestion/examples/archive/: graphiti_search_conceptual_example.py  graphiti_search_conceptual_example_v2.py
ingestion/graph/: count_episodes.py  graph.py  textbook_structure.py
ingestion/graph/archive/: graph_v1.py  graph_v2.py  graph_v3.py  graph_v4.py  graph_v5.py
ingestion/graph/metadata/: __init__.py  exp_g11_bio_1404.py
ingestion/lib/: embedding.py
ingestion/loaders/: bulk_html_loader.py  html-loader.py  html_loader.py  markdown_loader.py  merge_bulk_json.py
ingestion/normalize/: normalize_zwnj_in_prepare_json.py
ingestion/splitter/: semantic_splitter.py
(+74 files in other folders)
