[project]
name = "sgpt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "graphiti-core>=0.29.0",
    "hazm>=0.12.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "openai>=2.33.0",
    "unstructured[html]>=0.22.26",
]
