[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sgpt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10.1,<4",
    "python-dotenv>=1.0.0",
    "graphiti-core[falkordb]>=0.29.0",
    "hazm>=0.12.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "openai>=2.33.0",
    "unstructured[html]>=0.22.26",
    "en-core-web-sm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
