[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sgpt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10.1,<4",
    "python-dotenv>=1.0.0",
    "graphiti-core[falkordb]>=0.29.0",
    "hazm>=0.12.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "openai>=2.33.0",
    "unstructured[html]>=0.22.26",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.18",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.25.0",
    "pyTelegramBotAPI>=4.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]
