[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sgpt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.7",
    "markdown>=3.10.1,<4",
    "python-dotenv>=1.0.0",
    "graphiti-core[falkordb]>=0.29.0",
    "hazm>=0.12.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "openai>=2.33.0",
    "unstructured[html]>=0.22.26",
]

[tool.setuptools.packages.find]
where = ["."]
